--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.4.1",
+    "ngx-bootstrap": "^4.0.0",
+    "ngx-mask": "^7.9.1",
     "rxjs": "^5.1.0",
+    "sweetalert2": "^8.8.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
@@ -29,15 +33,19 @@
     "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
+    "angular2-materialize": "^15.1.10",
     "codelyzer": "~2.0.0",
+    "hammerjs": "^2.0.8",
     "jasmine-core": "~2.5.2",
     "jasmine-spec-reporter": "~3.2.0",
+    "jquery": "^2.2.4",
     "karma": "~1.4.1",
     "karma-chrome-launcher": "~2.0.0",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "materialize-css": "^0.100.1",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
